# novel_builder

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONCURRENCY_FIX_EXPLANATION.md  CONTRIBUTING.md  LARGE_FILES_ANALYSIS.md  LICENSE  README.md  SECURITY.md  SERVICES_TEST_GROUP_1_RESULTS.md  SERVICE_TEST_FIX_REPORT.md  STAGE0_TASK5_COMPLETION_REPORT.md  STAGE_6_COMPLETION_REPORT.md  TEST_FAILURE_FIX_QUICK_REFERENCE.md  TEST_FIX_COMPLETION_REPORT.md  TEST_FIX_QUICK_GUIDE.md  TEST_TIMEOUT_AND_CACHE_FIX_REPORT.md  TEST_TYPE_CAST_FIX_REPORT.md  THEME_PROVIDER_TEST_FIX_REPORT.md  UNIMPLEMENTED_ERROR_FIX_REPORT.md  UNIT_TEST_FIX_FINAL_REPORT.md  WIDGET_TEST_FIX_REPORT.md  _mergeContextsByOrder_函数测试报告.md  ai-architecture-bifurcating-spirals.html  alice_chapters.json  alice_sw_crawler.py  baseline_analysis.txt  ch1.txt  custom_painter_example.dart  debug_syshangguan.py  docker-compose.yml  myspacenovel_builderbackend_openapi.json  novel_api_service_wrapper_refactor_report.md  replace_snackbars.py  requirements.txt  (+13 more)
backend/: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  API_USAGE.md  BACKEND_TESTING.md  CLAUDE.md  CONTRIBUTING.md  CRAWLER_ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.debug  Dockerfile.simple  Dockerfile.test  Makefile  README.md  README_DEBUG.md  SCRAPLING_ADAPTER_FIX.md  SEARCH_SITE_ARCHITECTURE_UPDATE.md  SITE_CAPABILITIES.md  SUPPORTED_SITES.md  TESTING_REPORT.md  alembic.ini  crawler_development_guide.md  debug_shukuge.py  debug_shukuge2.py  docker-compose.test.yml  docker-compose.yml  mypy.ini  openapi.json  pyproject.toml  simple_test.py  test_backup_upload.py  test_improvements.py  test_new_apis.py  test_playwright_wfxs.py  test_simple_client.py  test_simple_workflow.py  test_text2img.py  test_text2img_fixed.py  (+4 more)
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_migration.py  033cfcda6ad9_add_role_card_tasks_table.py  0854456d220e_update_chapter_cache_table_structure.py  1cf2c108acc1_remove_video_fields_from_image_tables.py  20241228_add_scene_comfyui_mapping_tables.py  20241230_add_video_comfyui_task_id.py  20260707_add_negative_prompt_to_text2img.py  20260707_simplify_t2i_i2v.py  20260708_drop_cache_tables.py  262daff792e5_add_text2img_chapter_illustrations_table.py  69a1dfa2484c_allow_task_id_to_be_nullable_for_.py  87122bfc655a_add_model_name_to_scene_comfyui_tables.py  aba3a21b25b4_add_scene_illustration_tables.py  b8c5e4d7f9a1_add_image_to_video_functionality.py  bb9801edb8c8_create_independent_video_status_table.py  e7b3ba19a7f3_update_user_input_field_in_role_card_.py  fa0c8cbd60d7_initial_schema_unified_model_definitions.py
backend/app/: __init__.py  config.py  constants.py  database.py  exceptions.py  logging_config.py  main.py  models.py  schemas.py  workflows.yaml
backend/app/models/: __init__.py  app_version.py  cache.py  chapter_list_cache.py  client_log.py  scene_comfyui_mapping.py  scene_illustration.py  text2img.py  video_status.py
backend/app/schemas/: log.py
backend/app/services/: __init__.py  alice_sw_crawler.py  alice_sw_crawler_refactored.py  app_version_service.py  base_crawler.py  biquge543_crawler.py  cache_decorator.py  cache_service.py  cache_storage.py  cache_types.py  cache_validators.py  comfyui_client.py  comfyui_client_title_based.py  comfyui_client_v2.py  comfyui_video_client.py  crawler_factory.py  ddxsmf_crawler.py  dify_client.py  enhanced_base_crawler.py  hermes_client.py  http_client.py  image_to_video_service.py  novel_cache_service.py  novel_sync_service.py  page_response.py  role_card_async_service.py  role_card_service.py  scene_illustration_service.py  scrapling_fetcher.py  scrapling_monitor.py  scrapling_session_pool.py  scrapling_spider.py  search_service.py  session_manager.py  shuhaoxs_crawler.py  shukuge_crawler.py  shukuge_crawler_refactored.py  smxku_crawler.py  syshangguan_crawler.py  text2img_service.py  (+6 more)
backend/app/utils/: __init__.py  model_validation.py
backend/app/workflow_config/: __init__.py  models.py  workflow_config.py
backend/comfyui_json/img2video/: 260103成分表上传.xlsx  MMAudio.json  WAN 2.2 Smooth Workflow v2.0 (txt2vid).json  i2v.json  smooth_i2v.json  smooth_i2v_origin.json  ~$skin_data.xlsx
backend/comfyui_json/text2img/: DBZ3-4k_00029_.json  Moody Zimage Simple Workflow - V3.json  image_netayume_lumina_t2i.json  image_z__768x1280.json  t2i_1280x720.json  t2i_704x1408.json  t2i_768x1280.json  v17.5.json  干净动漫2.json
backend/examples/: example_usage.py
backend/novel_sync/AAA/: meta.json
backend/prompts/: immersive_chat_prompt.md
backend/scripts/: quickstart.py  run_backend_tests.py
backend/tests/: conftest.py  debug_alicesw_detail.py  debug_biquge543.py  debug_biquge543_chapters.py  debug_biquge543_content.py  debug_biquge543_divs.py  debug_biquge543_extract.py  debug_biquge543_filter.py  debug_biquge543_first_page.py  debug_biquge543_first_page_v2.py  debug_biquge543_neirong.py  debug_biquge543_pagination.py  debug_biquge543_raw.py  debug_biquge543_structure.py  debug_build_css_selector.py  debug_chapter_detailed.py  debug_chapter_page.py  debug_ddxsmf.py  debug_find_content.py  debug_find_method.py  debug_novel_page.py  debug_page51.py  debug_page52.py  debug_pages50_52.py  debug_text_get.py  debug_text_matching.py  debug_twxs_search.py  debug_wfxs.py  debug_wfxs_booklist.py  debug_wodeshucheng.py  factories.py  quick_adapter_test.py  quick_test.py
(+1971 files in other folders)
